add accordion component

--- a/apps/hello-world/src/app/app.component.html
+++ b/apps/hello-world/src/app/app.component.html
@@ -1,1 +1,2 @@
-<conf-demo-nx-welcome></conf-demo-nx-welcome> <router-outlet></router-outlet>
+<router-outlet></router-outlet>
+<a routerLink="home">Home</a>
