--- a/libs/design-system/src/lib/accordion/accordion.component.html
+++ b/libs/design-system/src/lib/accordion/accordion.component.html
@@ -22,10 +22,7 @@
       [attr.id]="'accordion-body-' + index"
       [attr.aria-labelledby]="'accordion-header-' + index"
     >
-      Lorem ipsum dolor, sit amet consectetur adipisicing elit. Perferendis
-      excepturi incidunt ipsum deleniti labore, tempore non nam doloribus
-      blanditiis veritatis illo autem iure aliquid ullam rem tenetur deserunt
-      velit culpa?
+      This is test Accordion, to be used
     </div>
   </cdk-accordion-item>
 </cdk-accordion>
