--- a/libs/home/src/lib/home/home.component.html
+++ b/libs/home/src/lib/home/home.component.html
@@ -1,6 +1,11 @@
 <conf-demo-title title="Home" />
 <conf-demo-accordion />
 
+
+<div>
+    
+</div>
+
 <br />
 
 This is About us section This is a new update
